--- a/leo_weather.info.yml
+++ b/leo_weather.info.yml
@@ -1,9 +1,9 @@
-name: 'leo_wheather'
+name: 'leo_weather'
 type: module
 description: 'Basic weather  system'
 core: 8.x
 dependencies:
   - node
-  - block
 package: 'Custom'
 version: '8.x-1.0'
+configure: leo_weather.settings
